--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
 
     <dependency>
       <groupId>com.h2database</groupId>
