--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=pass
-spring.datasource.url=jdbc:mysql://localhost:3306/realworld
+spring.datasource.url=jdbc:mysql://localhost:3306/posting
 spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.hikari.minimum-idle=1
 spring.jpa.hibernate.ddl-auto=update
