--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 spring.datasource.username=root
 spring.datasource.password=pass
-spring.datasource.url=jdbc:mysql://localhost:3306/posting
+spring.datasource.url=jdbc:mysql://localhost:3306/posting?serverTimezone=Asia/Seoul&autoReconnect=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
 spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.hikari.minimum-idle=1
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 # 5 secs
 spring.datasource.hikari.connection-timeout=5000
