add cors, refactor member module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.jpa.open-in-view=false
 
 token.expiration=60
 token.signKey=rebwonsign
+token.issuer=rebwon
 batchSize=1500000
 
 server.servlet.encoding.charset=UTF-8
