--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,24 @@
-version: "3.9"
+version: "3"
 services:
-  db:
+  real_world_backend_db:
+    container_name: realworld_db
     image: mysql:5.7
+    restart: always
     environment:
       MYSQL_DATABASE: realworld
       MYSQL_ROOT_PASSWORD: pass
-      MYSQL_ROOT_HOST: '%'
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
     ports:
-      - "3306:3306"
+      - 3306:3306
 
-  app:
-    image: msolo021015/real-world-backend
+  real_world_backend_app:
+    container_name: realworld_app
+    image: msolo021015/real-world-backend:0.0.1
     ports:
-      - "8080:8080"
+      - 8080:8080
     depends_on:
-      - db
+      - real_world_backend_db
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://realworld_db:3306/realworld?serverTimezone=Asia/Seoul&autoReconnect=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: pass
