--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=root
 spring.datasource.password=pass
-spring.datasource.url=jdbc:mysql://realworld:3306/realworld?serverTimezone=Asia/Seoul&autoReconnect=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
+spring.datasource.url=jdbc:mysql://realworld_db:3306/realworld?serverTimezone=Asia/Seoul&autoReconnect=true&characterEncoding=UTF-8&rewriteBatchedStatements=true
 spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.hikari.minimum-idle=1
 spring.jpa.hibernate.ddl-auto=update
